fix: Changed the .jpg to .png
easy

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       }
 
       body {
-        /* background: url("assets/bg.jpg") center; */
+        /* background: url("assets/bg.png") center; */
         background-color: #111111;
         /* background-size: cover; */
       }
@@ -263,14 +263,14 @@
                 <img
                   alt="Ooglians Image"
                   class="drop-shadow-s rounded"
-                  src="assets/oogli_1.jpg"
+                  src="assets/oogli_1.png"
                 />
               </div>
               <div class "">
                 <img
                   alt="Ooglians Image 2"
                   class="drop-shadow-s rounded"
-                  src="assets/oogli_2.jpg"
+                  src="assets/oogli_2.png"
                 />
             </div>
           </div>
@@ -289,14 +289,14 @@
                 <img
                   alt="Block'em Image 1"
                   class="drop-shadow-s rounded"
-                  src="assets/blockem_1.jpg"
+                  src="assets/blockem_1.png"
                 />
               </div>
               <div class "">
                 <img
                   alt="Block'em Image 2"
                   class="drop-shadow-s rounded"
-                  src="assets/blockem_2.jpg"
+                  src="assets/blockem_2.png"
                 />
             </div>
           </div>
@@ -315,14 +315,14 @@
                 <img
                   alt="Rust Racers Image 1"
                   class="drop-shadow-s rounded"
-                  src="assets/rustracers_1.jpg"
+                  src="assets/rustracers_1.png"
                 />
               </div>
               <div class "">
                 <img
                   alt="Rust Racers Image 2"
                   class="drop-shadow-s rounded"
-                  src="assets/rustracers_2.jpg"
+                  src="assets/rustracers_2.png"
                 />
             </div>
           </div>
