--- a/index.html
+++ b/index.html
@@ -251,12 +251,18 @@
         <h1 id="games" class="font-size-32 font-weight-700 margin-bottom-8">
           Games
         </h1>
-        <p>Some of the games I have worked on.</p>
+        <p>Some of the games I have worked on, in order of involvement.</p>
 
         <div class="margin-top-24 margin-bottom-64">
           <h3 class="horizontal-center font-size-24 font-weigth-700 margin-bottom-8">
-            Ooglians
+            Ooglians (2022)
           </h3>
+		  <p class="horizontal-center margin-bottom-4">
+          <b>Rogue-lite Base Building Tower Defense</b>
+		  </p>
+		  <p class="horizontal-center margin-bottom-4">
+		  Roles: Producer, Art, Game Designer, Localization, Release Manager
+          </p>
           <div class="horizontal-center column margin-bottom-16">
             <div class="row gap-16 margin-16 space-between">
               <div class "">
@@ -274,15 +280,22 @@
                 />
             </div>
           </div>
-          <p class="margin-bottom-8">
-            Rogue-lite Base Building Tower Defense
-          </p>
+		  <p class="margin-bottom-8">
+		    <a href="https://store.steampowered.com/app/2162070/Ooglians/">Ooglians on Steam</a>
+		  </p>
+		  <hr width="70%">
         </div>
 
         <div class="margin-top-24 margin-bottom-64">
           <h3 class="horizontal-center font-size-24 font-weigth-700 margin-bottom-8">
-            Block'Em!
+            Block'Em! (2022)
           </h3>
+		  <p class="horizontal-center margin-bottom-4">
+          <b>Multiplayer PvP Platforming Party Game</b>
+		  </p>
+		  <p class="horizontal-center margin-bottom-4">
+		  Roles: Producer, Art, Game Designer, Level Designer, Localization, Release Manager
+          </p>
           <div class="horizontal-center column margin-bottom-16">
             <div class="row gap-16 margin-16 space-between">
               <div class "">
@@ -301,14 +314,54 @@
             </div>
           </div>
           <p class="margin-bottom-8">
-            Multiplayer PvP Platforming Party Game
+            <a href="https://store.steampowered.com/app/1529220/BlockEm/">Block'Em! on Steam</a>
           </p>
+		  <hr width="70%">
         </div>
 
-        <div class="margin-top-24 margin-bottom-64">
+		  <div class="margin-top-24 margin-bottom-64">
           <h3 class="horizontal-center font-size-24 font-weigth-700 margin-bottom-8">
-            Rust Racers
+            Vessels of Decay (Unreleased)
           </h3>
+		  <p class="horizontal-center margin-bottom-4">
+          <b>retro-inspired action-adventure set in post-apocalyptic Scandinavia</b>
+		  </p>
+		  <p class="horizontal-center margin-bottom-4">
+		  Roles: Producer
+          </p>
+          <div class="horizontal-center column margin-bottom-16">
+            <div class="row gap-16 margin-16 space-between">
+              <div class "">
+                <img
+                  alt="VoD Image 1"
+                  class="drop-shadow-s rounded"
+                  src="assets/vod_1.png"
+                />
+              </div>
+              <div class "">
+                <img
+                  alt="VoD Image 2"
+                  class="drop-shadow-s rounded"
+                  src="assets/vod_2.png"
+                />
+            </div>
+          </div>
+          <p class="margin-bottom-8">
+            <a href="https://store.steampowered.com/app/1425180/Vessels_of_Decay/">Vessels of Decay on Steam</a>
+          </p>
+		  <hr width="70%">
+        </div>
+
+		<div class="margin-top-24 margin-bottom-64">
+          <h3 class="horizontal-center font-size-24 font-weigth-700 margin-bottom-8">
+            Rust Racers (Unreleased)
+          </h3>
+		  <p class="horizontal-center margin-bottom-8">
+          <b>Online Multiplayer Vehicular Combat Game</b>
+		  </p>
+		  <p class="horizontal-center margin-bottom-8">
+		  Roles: Producer
+          </p>
           <div class="horizontal-center column margin-bottom-16">
             <div class="row gap-16 margin-16 space-between">
               <div class "">
@@ -327,10 +380,284 @@
             </div>
           </div>
           <p class="margin-bottom-8">
-            Online Multiplayer Vehicular Combat Game
+            <a href="https://store.steampowered.com/app/1044060/Rust_Racers/">Rust Racers on Steam</a>
           </p>
+		  <hr width="70%">
         </div>
-          
+
+        <div class="margin-top-24 margin-bottom-64">
+          <h3 class="horizontal-center font-size-24 font-weigth-700 margin-bottom-8">
+            Chenso Club (2022)
+          </h3>
+		  <p class="horizontal-center margin-bottom-4">
+          <b>Retro Sidescrolling Platform Brawler</b>
+		  </p>
+		  <p class="horizontal-center margin-bottom-4">
+		  Roles: Localization Manager
+          </p>
+          <div class="horizontal-center column margin-bottom-16">
+            <div class="row gap-16 margin-16 space-between">
+              <div class "">
+                <img
+                  alt="Chenso Club Image 1"
+                  class="drop-shadow-s rounded"
+                  src="assets/chensoclub_1.png"
+                />
+              </div>
+              <div class "">
+                <img
+                  alt="Chenso Club Image 2"
+                  class="drop-shadow-s rounded"
+                  src="assets/chensoclub_2.png"
+                />
+            </div>
+          </div>
+          <p class="margin-bottom-8">
+            <a href="https://store.steampowered.com/app/1454730/Chenso_Club/">Chenso Club on Steam</a>
+          </p>
+		  <hr width="70%">
+        </div>
+		
+		<div class="margin-top-24 margin-bottom-64">
+          <h3 class="horizontal-center font-size-24 font-weigth-700 margin-bottom-8">
+            Hoplegs (2021)
+          </h3>
+		  <p class="horizontal-center margin-bottom-4">
+          <b>Rage-inducing platformer</b>
+		  </p>
+		  <p class="horizontal-center margin-bottom-4">
+		  Roles: Producer, Localization, Release Manager
+          </p>
+          <div class="horizontal-center column margin-bottom-16">
+            <div class="row gap-16 margin-16 space-between">
+              <div class "">
+                <img
+                  alt="Hoplegs Image 1"
+                  class="drop-shadow-s rounded"
+                  src="assets/hoplegs_1.png"
+                />
+              </div>
+              <div class "">
+                <img
+                  alt="Hoplegs Image 2"
+                  class="drop-shadow-s rounded"
+                  src="assets/hoplegs_2.png"
+                />
+            </div>
+          </div>
+          <p class="margin-bottom-8">
+            <a href="https://store.steampowered.com/app/1395830/Hoplegs/">Hoplegs on Steam</a>
+          </p>
+		  <hr width="70%">
+        </div>
+
+		 <div class="margin-top-24 margin-bottom-64">
+          <h3 class="horizontal-center font-size-24 font-weigth-700 margin-bottom-8">
+            Bullet Casters (2023)
+          </h3>
+		  <p class="horizontal-center margin-bottom-4">
+          <b>Bullet hell with assymetric PvP - be the bullet hell</b>
+		  </p>
+		  <p class="horizontal-center margin-bottom-4">
+		  Roles: Producer, Localization Manager
+          </p>
+          <div class="horizontal-center column margin-bottom-16">
+            <div class="row gap-16 margin-16 space-between">
+              <div class "">
+                <img
+                  alt="Bullet Casters Image 1"
+                  class="drop-shadow-s rounded"
+                  src="assets/bulletcasters_1.png"
+                />
+              </div>
+              <div class "">
+                <img
+                  alt="Bullet Casters Image 2"
+                  class="drop-shadow-s rounded"
+                  src="assets/bulletcasters_2.png"
+                />
+            </div>
+          </div>
+          <p class="margin-bottom-8">
+            <a href="https://store.steampowered.com/app/1838490/Bullet_Casters/">Bullet Casters on Steam</a>
+          </p>
+		  <hr width="70%">
+        </div>
+		
+		 <div class="margin-top-24 margin-bottom-64">
+          <h3 class="horizontal-center font-size-24 font-weigth-700 margin-bottom-8">
+            1993 Space Machine (2016)
+          </h3>
+		  <p class="horizontal-center margin-bottom-4">
+          <b>classic shoot em up</b>
+		  </p>
+		  <p class="horizontal-center margin-bottom-4">
+		  Roles: Localization, Release Manager
+          </p>
+          <div class="horizontal-center column margin-bottom-16">
+            <div class="row gap-16 margin-16 space-between">
+              <div class "">
+                <img
+                  alt="1993 Image 1"
+                  class="drop-shadow-s rounded"
+                  src="assets/1993_1.png"
+                />
+              </div>
+              <div class "">
+                <img
+                  alt="1993 Image 2"
+                  class="drop-shadow-s rounded"
+                  src="assets/1993_2.png"
+                />
+            </div>
+          </div>
+          <p class="margin-bottom-8">
+            <a href="https://store.steampowered.com/app/373480/1993_Space_Machine/">1993 on Steam</a>
+          </p>
+		  <hr width="70%">
+        </div>
+
+		<div class="margin-top-24 margin-bottom-64">
+          <h3 class="horizontal-center font-size-24 font-weigth-700 margin-bottom-8">
+            Furious Business (Unreleased)
+          </h3>
+		  <p class="horizontal-center margin-bottom-4">
+          <b>Rage-fueled bullet hell</b>
+		  </p>
+		  <p class="horizontal-center margin-bottom-4">
+		  Roles: Producer, Art, Game Designer
+          </p>
+          <div class="horizontal-center column margin-bottom-16">
+            <!--<div class="row gap-16 margin-16 space-between">
+              <div class "">
+                <img
+                  alt="Furious Business Image 1"
+                  class="drop-shadow-s rounded"
+                  src="assets/furibusi_1.png"
+                />
+              </div>
+              <div class "">
+                <img
+                  alt="Furious Business Image 2"
+                  class="drop-shadow-s rounded"
+                  src="assets/furibusi_2.png"
+                />
+            </div>
+          </div>-->
+          <p class="margin-bottom-8">
+            <a href="https://hertzole.itch.io/furious-business">Furious Business on itch.io</a> (browser playable demo)
+          </p>
+		  <hr width="70%">
+        </div>
+		
+		 <div class="margin-top-24 margin-bottom-64">
+          <h3 class="horizontal-center font-size-24 font-weigth-700 margin-bottom-8">
+            Unga Bungers (Unreleased)
+          </h3>
+		  <p class="horizontal-center margin-bottom-4">
+          <b>Tower Defense Colony Sim (kindof)</b>
+		  </p>
+		  <p class="horizontal-center margin-bottom-4">
+		  Roles: Producer
+          </p>
+          <div class="horizontal-center column margin-bottom-16">
+            <!--<div class="row gap-16 margin-16 space-between">
+              <div class "">
+                <img
+                  alt="Unga Bungers Image 1"
+                  class="drop-shadow-s rounded"
+                  src="assets/ungabungers_1.png"
+                />
+              </div>
+              <div class "">
+                <img
+                  alt="Unga Bungers Image 2"
+                  class="drop-shadow-s rounded"
+                  src="assets/ungabunger2.png"
+                />
+            </div> 
+          </div> -->
+		  <hr width="70%">
+        </div>
+
+		 <div class="margin-top-24 margin-bottom-64">
+          <h3 class="horizontal-center font-size-24 font-weigth-700 margin-bottom-8">
+            Project CUBE (working title)
+          </h3>
+		  <p class="horizontal-center margin-bottom-4">
+          <b>Retro fixed camera co-op horror survival</b>
+		  </p>
+		  <p class="horizontal-center margin-bottom-4">
+		  Roles: Producer, Art, Game Designer, Level Designer
+          </p>
+          <div class="horizontal-center column margin-bottom-16">
+            <!--<div class="row gap-16 margin-16 space-between">
+              <div class "">
+                <img
+                  alt="CUBE Image 1"
+                  class="drop-shadow-s rounded"
+                  src="assets/cube_1.png"
+                />
+              </div>
+              <div class "">
+                <img
+                  alt="CUBE Image 2"
+                  class="drop-shadow-s rounded"
+                  src="assets/cube_2.png"
+                />
+            </div>
+          </div> -->
+		  <hr width="70%">
+        </div>
+
+<!-- game template		
+		 <div class="margin-top-24 margin-bottom-64">
+          <h3 class="horizontal-center font-size-24 font-weigth-700 margin-bottom-8">
+            gamename (Unreleased)
+          </h3>
+		  <p class="horizontal-center margin-bottom-4">
+          <b>oneliner game description</b>
+		  </p>
+		  <p class="horizontal-center margin-bottom-4">
+		  Roles: Producer, Art, Game Designer, Level Designer, Localization, Release Management
+          </p>
+          <div class="horizontal-center column margin-bottom-16">
+            <div class="row gap-16 margin-16 space-between">
+              <div class "">
+                <img
+                  alt="gamename Image 1"
+                  class="drop-shadow-s rounded"
+                  src="assets/gamename_1.png"
+                />
+              </div>
+              <div class "">
+                <img
+                  alt="gamename Image 2"
+                  class="drop-shadow-s rounded"
+                  src="assets/gamename_2.png"
+                />
+            </div>
+          </div>
+          <p class="margin-bottom-8">
+            steam link?
+          </p>
+		  <hr width="70%">
+        </div>
+game template -->
+
+<!-- RESUME -->
+          <h2
+            id="Resume"
+            class="font-weight-700 font-size-24 margin-bottom-8 margin-top-64"
+          >
+            Resume
+          </h2>
+		  <p class="margin-bottom-8">
+			<a href="https://docs.google.com/document/d/1H91J019PV8V9PQjFma2yohCq2-bjZPb1i5PUZk4U_QY/">
+				Google Doc resume
+			</a>
+
+<!-- CONTACT -->          
           <h2
             id="contact"
             class="font-weight-700 font-size-24 margin-bottom-8 margin-top-64"
