fixes, category split
fixed capitalization, broken links and split games and personal projects

--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
         class="horizontal-center gap-16 margin-top-16 margin-bottom-16 flex-wrap"
       >
         <div><a href="#games">Games</a></div>
+		<div><a href="#personalprojects">Personal Projects</a></div>
         <div><a href="#resume">Resume</a></div>
         <div><a href="#about">About</a></div>
         <div><a href="#contact">Contact</a></div>
@@ -324,7 +325,7 @@
             Vessels of Decay (Unreleased)
           </h3>
 		  <p class="horizontal-center margin-bottom-4">
-          <b>retro-inspired action-adventure set in post-apocalyptic Scandinavia</b>
+          <b>Retro-inspired Action-adventure set in post-apocalyptic Scandinavia</b>
 		  </p>
 		  <p class="horizontal-center margin-bottom-4">
 		  Roles: Producer
@@ -357,7 +358,7 @@
             Rust Racers (Unreleased)
           </h3>
 		  <p class="horizontal-center margin-bottom-8">
-          <b>Online Multiplayer Vehicular Combat Game</b>
+          <b>Online Multiplayer Vehicular Arena Combat</b>
 		  </p>
 		  <p class="horizontal-center margin-bottom-8">
 		  Roles: Producer
@@ -423,7 +424,7 @@
             Hoplegs (2021)
           </h3>
 		  <p class="horizontal-center margin-bottom-4">
-          <b>Rage-inducing platformer</b>
+          <b>Rage-inducing Platformer</b>
 		  </p>
 		  <p class="horizontal-center margin-bottom-4">
 		  Roles: Producer, Localization, Release Manager
@@ -489,7 +490,7 @@
             1993 Space Machine (2016)
           </h3>
 		  <p class="horizontal-center margin-bottom-4">
-          <b>classic shoot em up</b>
+          <b>Classic Shoot-em-up</b>
 		  </p>
 		  <p class="horizontal-center margin-bottom-4">
 		  Roles: Localization, Release Manager
@@ -516,7 +517,13 @@
           </p>
 		  <hr width="70%">
         </div>
-
+		
+        <h1
+            id="personalprojects"
+            class="font-weight-700 font-size-32 margin-bottom-8 margin-top-64"
+        >
+            Personal Projects
+        </h1>
 		<div class="margin-top-24 margin-bottom-64">
           <h3 class="horizontal-center font-size-24 font-weigth-700 margin-bottom-8">
             Furious Business (Unreleased)
@@ -647,7 +654,7 @@ game template -->
 
 <!-- RESUME -->
           <h2
-            id="Resume"
+            id="resume"
             class="font-weight-700 font-size-24 margin-bottom-8 margin-top-64"
           >
             Resume
